<resources>
    <string name="app_name">Movie Application</string>
    <string name="now_showing">Now Showing</string>
    <string name="movies">Movies</string>
    <string name="crime">Crime</string>
    <string name="drama">Drama</string>
    <string name="mystery">Mystery</string>
    <string name="book_now">Book Now</string>
    <string name="snopsys">Snopsys</string>
    <string name="movie_description">Hans Baerlach is a Swiss police detective who has dedicated much of his career to pursuing powerful and allegedly murderous businessman Richard Gastmann. Though Baerlach\'s partner meets his demise while investigating Gastmann, his replacement, Walter Tschanz, is undaunted. Meanwhile, the lovely Anna Crawley becomes involved in the case, which proceeds to take many twists and turns. Gender activist Diane Torrs worldwide appearances and workshops are now legendary. For the past thirty years, the main focus of this performance artists work has been an exploration of the theoretical, artistic as well as the practical aspects of gender identity. Katarina Peters documentary observes a Diane Torr workshop in Berlin in which a group of open-minded women come together to discover the secrets of masculinity. What makes a man a man and a woman a woman? Precisely when and where is gender identity formatted? How much is nature and how much nurture? Each of Torrs workshops represents an open-ended laboratory experiment in social behaviour in which the question is posed: is it possible to deliberately play out different roles and create a space in which to transgress both masculine and feminine characteristics?
</string>
</resources>