<?xml version="1.0" encoding="utf-8"?>
<layout>
    <data>

        <import type="android.view.View"/>
        <variable
            name="movie"
            type="com.example.movieapplication.model.Movie" />
        <import type="android.text.Html"/>
    </data>


    <androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".view.activity.HomeScreenActivity">
        <com.google.android.material.appbar.AppBarLayout
            android:layout_width="match_parent"
            android:background="@color/purple_700"
            android:layout_height="wrap_content">
         <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                app:titleTextColor="@color/white"
                android:layout_width="match_parent"
                app:navigationIcon="@drawable/ic_back"
                android:gravity="center"
                android:layout_height="?attr/actionBarSize">
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginEnd="@dimen/_16sp"
                    >
                    <TextView
                        android:id="@+id/title"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:layout_marginEnd="36dp"

                        android:textColor="@color/white"
                        android:text="@string/movies"
                        android:textSize="@dimen/_16sp"/>
                    <ImageView
                        android:layout_centerVertical="true"
                        android:layout_alignParentRight="true"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_share"/>
                </RelativeLayout>


            </androidx.appcompat.widget.Toolbar>
        </com.google.android.material.appbar.AppBarLayout>
        <androidx.core.widget.NestedScrollView
            android:id="@+id/nScrollView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fillViewport="true">
            <LinearLayout
                android:layout_width="match_parent"
                android:orientation="vertical"
                android:background="@color/off_white"

                android:layout_marginTop="?attr/actionBarSize"
                android:layout_height="match_parent"
                >
                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="320dp">
                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="300dp"
                    android:background="@color/purple_200"
                    android:padding="@dimen/_16sp"
                    >
                    <androidx.cardview.widget.CardView
                        android:id="@+id/movieImage"
                        android:layout_height="@dimen/_200dp"                        android:layout_margin="8dp"
                        android:elevation="8dp"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        android:layout_width="@dimen/_150dp"
                        app:cardCornerRadius="8dp">

                        <androidx.appcompat.widget.AppCompatImageView
                            android:id="@+id/imageview"
                            android:transitionName="profile"
                            android:layout_width="match_parent"
                            android:scaleType="centerCrop"
                            image_url="@{movie.featured_image!=null ? movie.featured_image: ``}"
                            android:layout_height="@dimen/_200dp"
                            tools:background="@tools:sample/backgrounds/scenic"/>


                    </androidx.cardview.widget.CardView>

                    <RelativeLayout
                        android:id="@+id/movieInfoLayout"
                        android:layout_width="0dip"
                        android:layout_marginStart="@dimen/_16sp"
                        android:layout_height="@dimen/_200dp"
                        app:layout_constraintStart_toEndOf="@id/movieImage"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="@id/movieImage">
                        <TextView
                            android:id="@+id/movieTitle"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center|left"
                            android:textColor="@color/white"
                            android:text="@{movie.title}"
                            android:singleLine="true"
                            android:textSize="@dimen/_20sp"/>
                        <TextView
                            android:id="@+id/movieInfo"
                            android:layout_below="@+id/movieTitle"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="5dp"
                            android:gravity="center|left"
                            android:textColor="@color/white"
                            android:text="R | 3h 7min | 30 Mar,2015"
                            android:textSize="12sp"/>
                       <LinearLayout
                           android:id="@+id/movieType"
                           android:layout_below="@+id/movieInfo"
                           android:layout_marginTop="@dimen/_16sp"
                           android:layout_width="match_parent"
                           android:layout_height="wrap_content"
                           android:orientation="horizontal">
                        <TextView
                            android:id="@+id/crime"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:layout_marginEnd="5dp"
                            android:paddingTop="2dp"
                            android:paddingBottom="2dp"
                            android:paddingStart="8dp"
                            android:paddingEnd="8dp"
                            android:background="@drawable/border"
                            android:textColor="@color/white"
                            android:text="@string/crime"
                            android:textSize="12sp"/>
                           <TextView
                               android:id="@+id/drama"
                               android:layout_width="wrap_content"
                               android:layout_height="wrap_content"
                               android:gravity="center"
                               android:layout_marginEnd="5dp"
                               android:paddingTop="2dp"
                               android:paddingBottom="2dp"
                               android:paddingStart="8dp"
                               android:paddingEnd="8dp"
                               android:background="@drawable/border"
                               android:textColor="@color/white"
                               android:text="@string/drama"
                               android:textSize="12sp"/>
                           <TextView
                               android:id="@+id/mystery"
                               android:layout_width="wrap_content"
                               android:layout_height="wrap_content"
                               android:gravity="center"
                               android:paddingTop="2dp"
                               android:paddingBottom="2dp"
                               android:paddingStart="8dp"
                               android:paddingEnd="8dp"
                               android:background="@drawable/border"
                               android:textColor="@color/white"
                               android:text="@string/mystery"
                               android:textSize="12sp"/>
                    </LinearLayout>
                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_below="@id/movieType"
                            android:layout_alignParentBottom="true"
                            android:orientation="vertical"
                            android:gravity="bottom">
                        <androidx.appcompat.widget.AppCompatRatingBar
                            android:id="@+id/rating"
                            style="@style/myRatingBar"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:rating="4"
                            android:stepSize="1" />
                        <TextView
                            android:id="@+id/review"
                            android:layout_alignParentBottom="true"
                            android:layout_below="@id/rating"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="5dp"
                            android:layout_gravity="bottom"
                            android:gravity="center|left|bottom"
                            android:textColor="@color/white"
                            android:text="Reviews: 10 (Critics) | 2456(Users)"
                            android:textSize="12sp"/>
                        </LinearLayout>



                    </RelativeLayout>
                </androidx.constraintlayout.widget.ConstraintLayout>
                    <androidx.cardview.widget.CardView
                        android:layout_width="@dimen/_150dp"
                        android:layout_marginEnd="@dimen/_20dp"
                        android:background="@drawable/border"
                        android:layout_height="wrap_content"
                        android:elevation="8dp"
                        android:layout_gravity="bottom|right"
                        app:cardCornerRadius="25dp">
                        <TextView
                            android:gravity="center"
                            android:id="@+id/book_now"
                            android:layout_width="@dimen/_150dp"
                            android:textColor="@color/purple_700"
                            android:layout_height="48dp"
                            android:text="@string/book_now"
                            android:textAllCaps="false"
                            />


                    </androidx.cardview.widget.CardView>
                </FrameLayout>
                <TextView
                    android:layout_marginTop="5dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center|left"
                    android:textColor="@color/black"
                    android:text="@string/snopsys"
                    android:padding="@dimen/_16sp"
                    android:textSize="@dimen/_20sp"/>
                <TextView
                    android:id="@+id/description"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:paddingLeft="@dimen/_16sp"
                    android:lineSpacingExtra="3dp"
                    android:paddingRight="@dimen/_16sp"
                    android:gravity="center|left"
                    android:textColor="@color/off_black"
                    android:text="@{Html.fromHtml(movie.short_description)}"
                    android:textSize="@dimen/_14sp"/>

            </LinearLayout>
        </androidx.core.widget.NestedScrollView>
    </androidx.coordinatorlayout.widget.CoordinatorLayout>
</layout>